--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
           <h2 class="content-card__title">1 спринт: Я — чистый лист</h2>
           <div class="mix">
             <h3 class="watermark">&lt;void&gt;</h3>
-            <img class="image sepia" src="./images/white-notebook.jpg" alt="Белый блокнот" />
+            <img
+              class="image sepia"
+              src="./images/white-notebook.jpg"
+              alt="Белый блокнот"
+            />
           </div>
           <div class="content-card__text">
             <p>
@@ -118,7 +122,10 @@
               за этим ощущением скрываются более глубокие вопросы: с чего
               начать? а вдруг будет слишком сложно? что, если я не справлюсь?
             </p>
-            <p>В этой пустоте можно и потеряться, но главное начать творческий процесс.</p>
+            <p>
+              В этой пустоте можно и потеряться, но главное начать творческий
+              процесс.
+            </p>
           </div>
           <div class="content-card__buttons">
             <button class="card__icon-button" type="button">
@@ -163,7 +170,11 @@
           <h2 class="content-card__title">1 спринт: А если не получится?</h2>
           <div class="mix">
             <h3 class="watermark">&lt;первый шаг&gt;</h3>
-            <img class="image saturate" src="./images/bloons.jpg" alt="Воздушные шары" />
+            <img
+              class="image saturate"
+              src="./images/bloons.jpg"
+              alt="Воздушные шары"
+            />
           </div>
           <div class="content-card__text">
             <p>
@@ -171,7 +182,10 @@
               могла быстро померкнуть и смениться ожиданием провала. Или вы,
               наоборот, могли вдохновиться успехами и поверить в себя.
             </p>
-            <p>Наверное, самый важный шаг и самая большая радость на данный момент!</p>
+            <p>
+              Наверное, самый важный шаг и самая большая радость на данный
+              момент!
+            </p>
           </div>
           <div class="content-card__buttons">
             <button class="card__icon-button" type="button">
@@ -216,7 +230,11 @@
           <h2 class="content-card__title">2 спринт: Погоня за идеалом</h2>
           <div class="mix">
             <h3 class="watermark">&lt;так близко, но так далеко&gt;</h3>
-            <img class="image contrast" src="./images/moon.jpg" alt="Недостижимая луна на фоне горы" />
+            <img
+              class="image contrast"
+              src="./images/moon.jpg"
+              alt="Недостижимая луна на фоне горы"
+            />
           </div>
           <div class="content-card__text">
             <p>
@@ -271,7 +289,11 @@
           <h2 class="content-card__title">2 спринт: О тех, кто рядом</h2>
           <div class="mix">
             <h3 class="watermark">мыслим как единое</h3>
-            <img class="image hue" src="./images/coworking.jpg" alt="Единомышленники" />
+            <img
+              class="image hue"
+              src="./images/coworking.jpg"
+              alt="Единомышленники"
+            />
           </div>
           <div class="content-card__text">
             <p>
@@ -282,7 +304,10 @@
               поддавался. Осваивать что-то новое легче, когда рядом есть
               единомышленники, не правда ли?
             </p>
-            <p>Как никак, в этой лодке (скорее, даже большом судне) ты плывешь не один!</p>
+            <p>
+              Как никак, в этой лодке (скорее, даже большом судне) ты плывешь не
+              один!
+            </p>
           </div>
           <div class="content-card__buttons">
             <button class="card__icon-button" type="button">
@@ -327,7 +352,11 @@
           <h2 class="content-card__title">3 спринт: Обходные стратегии</h2>
           <div class="mix">
             <h3 class="watermark">&lt;может так?&gt;</h3>
-            <img class="image grayscale" src="./images/different-angle.jpg" alt="Просмотр под другим углом" />
+            <img
+              class="image grayscale"
+              src="./images/different-angle.jpg"
+              alt="Просмотр под другим углом"
+            />
           </div>
           <div class="content-card__text">
             <p>
@@ -380,7 +409,11 @@
           <h2 class="content-card__title">3 спринт: Когда опускаются руки</h2>
           <div class="mix">
             <h3 class="watermark">&lt;прямо в цель;&gt;</h3>
-            <img class="image blur" src="./images/targeting.jpg" alt="Мальчик с луком целится в мишень" />
+            <img
+              class="image blur"
+              src="./images/targeting.jpg"
+              alt="Мальчик с луком целится в мишень"
+            />
           </div>
           <div class="content-card__text">
             <p>
@@ -435,7 +468,11 @@
           <h2 class="content-card__title">«Сейчас я здесь»</h2>
           <div class="mix">
             <h3 class="watermark">&lt;all the way up&gt;</h3>
-            <img class="image brightness" src="./images/improving.jpg" alt="Человек взбирается по лестнице" />
+            <img
+              class="image brightness"
+              src="./images/improving.jpg"
+              alt="Человек взбирается по лестнице"
+            />
           </div>
           <div class="content-card__text">
             <p>
@@ -447,7 +484,8 @@
               Ведь часто путь — и есть результат.
             </p>
             <p>
-              Чувствую, что я точно набрался опыта и готов идти дальше! <br> На пути к JS!
+              Чувствую, что я точно набрался опыта и готов идти дальше! <br />
+              На пути к JS!
             </p>
           </div>
           <div class="content-card__buttons">
@@ -500,14 +538,14 @@
         aria-controls="dialog"
       >
         <svg viewBox="0 0 21 21" class="save-icon">
-          <use href="#save-icon"/>
+          <use href="./images/svg/save-icon.svg#save-icon" />
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
       <dialog class="dialog" id="dialog">
         <div class="dialog-textarea">
           <svg viewBox="0 0 21 21" class="save-icon">
-            <use href="#save-icon"/>
+            <use href="./images/svg/save-icon.svg#save-icon" />
           </svg>
           <p class="dialog-text">Вставьте дискету, чтобы продолжить</p>
         </div>
@@ -523,25 +561,3 @@
     <script src="./scripts/like.js"></script>
   </body>
 </html>
-
-<svg
-  xmlns="http://www.w3.org/2000/svg"
-  width="21"
-  height="21"
-  fill="currentColor"
->
-  <symbol id="save-icon">
-    <path
-      d="M0 0h1.615v1.615H0zM0 1.615h1.615V3.23H0zM0 3.231h1.615v1.615H0zM0 4.846h1.615v1.615H0zM0 6.461h1.615v1.615H0zM0 8.077h1.615v1.615H0zM0 9.692h1.615v1.615H0zM0 11.308h1.615v1.615H0zM0 12.923h1.615v1.615H0zM0 14.539h1.615v1.615H0zM0 16.154h1.615v1.615H0zM0 17.769h1.615v1.615H0zM0 19.385h1.615V21H0zM17.77 0v1.615h-1.616V0zM16.154 0v1.615h-1.615V0zM14.539 0v1.615h-1.615V0zM12.923 0v1.615h-1.615V0zM11.308 0v1.615H9.693V0zM9.692 0v1.615H8.077V0zM8.077 0v1.615H6.462V0zM6.462 0v1.615H4.847V0zM4.846 0v1.615H3.231V0zM3.23 0v1.615H1.617V0zM19.385 1.616V3.23H17.77V1.616zM4.846 3.23v1.616H3.231V3.23zM4.846 1.615V3.23H3.231V1.615zM4.846 4.846v1.615H3.231V4.846zM16.154 3.231v1.615h-1.615V3.231zM16.154 1.615V3.23h-1.615V1.615zM16.154 4.846v1.615h-1.615V4.846zM12.923 3.23v1.616h-1.615V3.23zM12.923 1.615V3.23h-1.615V1.615zM12.923 4.846v1.615h-1.615V4.846zM16.154 6.462v1.615H14.54V6.462zM14.539 6.462v1.615h-1.615V6.462zM12.924 6.461v1.615h-1.615V6.461zM11.308 6.462v1.615H9.693V6.462zM9.693 6.461v1.615H8.078V6.461zM8.077 6.462v1.615H6.462V6.462zM6.462 6.462v1.615H4.847V6.462zM4.847 6.461v1.615H3.232V6.461zM17.769 11.307v1.615h-1.615v-1.615zM16.153 11.308v1.615h-1.615v-1.615z"
-    />
-    <path
-      d="M14.538 11.308v1.615h-1.615v-1.615zM12.923 11.307v1.615h-1.615v-1.615zM11.307 11.308v1.615H9.692v-1.615zM9.692 11.307v1.615H8.077v-1.615zM8.076 11.308v1.615H6.461v-1.615zM6.461 11.308v1.615H4.846v-1.615zM4.846 11.307v1.615H3.23v-1.615zM17.77 12.923v1.615h-1.616v-1.615zM4.846 12.923v1.615H3.231v-1.615z"
-    />
-    <path
-      d="M17.769 14.538v1.615h-1.615v-1.615zM4.846 14.538v1.615H3.23v-1.615zM17.77 16.153v1.615h-1.616v-1.615zM4.846 16.154v1.615H3.231v-1.615zM4.846 17.769v1.615H3.231v-1.615zM17.77 17.769v1.615h-1.616v-1.615zM19.384 19.385V21H17.77v-1.615zM17.77 19.384V21h-1.616v-1.615zM16.154 19.385V21h-1.615v-1.615zM14.538 19.385V21h-1.615v-1.615zM12.923 19.385V21h-1.615v-1.615zM11.307 19.385V21H9.692v-1.615zM9.692 19.385V21H8.077v-1.615zM8.077 19.385V21H6.462v-1.615zM6.461 19.385V21H4.846v-1.615zM4.846 19.385V21H3.231v-1.615zM3.23 19.385V21H1.617v-1.615zM21 21h-1.615v-1.615H21zM21 19.385h-1.615V17.77H21zM21 17.769h-1.615v-1.615H21zM21 16.154h-1.615v-1.615H21zM21 14.538h-1.615v-1.615H21zM21 12.923h-1.615v-1.615H21zM21 11.307h-1.615V9.692H21z"
-    />
-    <path
-      d="M21 9.693h-1.615V8.078H21zM21 8.077h-1.615V6.462H21zM21 6.462h-1.615V4.847H21zM21 4.846h-1.615V3.231H21z"
-    />
-  </symbol>
-</svg>
