--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
         class="button save-button"
         type="button"
         onclick="window['dialog-disk'].showModal();"
-        aria-controls="dialog"
+        aria-controls="dialog-disk"
       >
         <svg viewBox="0 0 21 21" class="save-icon">
           <use href="./images/svg/save-icon.svg#save-icon" />
