--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <a class="header__logo" href="">&lt;/HTML&gt;</a>
+      <a class="header__logo">&lt;/HTML&gt;</a>
       <h1 class="header__heading">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -74,6 +74,7 @@
                 viewBox="0 0 39 36"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -528,9 +529,6 @@
           </div>
         </li>
       </ul>
-    </main>
-
-    <footer class="footer">
       <button
         class="button save-button"
         type="button"
@@ -557,7 +555,7 @@
           <span class="button__text">Ок</span>
         </button>
       </dialog>
-    </footer>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
